# difussion_3d

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  TASKS.md  pyproject.toml  requirements.txt
configs/backbones/: dinov2_base_frozen.yaml  dinov2_large_hybrid.yaml  patch_vit.yaml
configs/data/: pixarmesh.yaml  pixarmesh_single_view_main.yaml  scannet.yaml  threedfront.yaml
configs/diffusion/: base.yaml  single_view_visible_direct_hidden_diffusion_v3_dinov2_frozen.yaml  single_view_visible_direct_hidden_diffusion_v4_dinov2_large_hybrid_ft.yaml  visible_locked.yaml  visible_locked_hiddenfocus.yaml  visible_locked_hiddenonly.yaml  visible_locked_occbias_v025.yaml  visible_locked_occbias_v0375.yaml  visible_locked_occbias_v050.yaml  visible_locked_occbias_v0625.yaml  visible_locked_tradeoff_v025.yaml  visible_locked_tradeoff_v050.yaml
configs/geometry_vae/: base.yaml  heavy.yaml  supervisor_full.yaml
configs/pipeline/: single_view_scene.yaml  visible_locked_compare.yaml  watchdog.yaml
configs/preprocess/: 3dfront_index.yaml  materialize_packets_oracle.yaml  normalize_3dfront_views.yaml  real_bootstrap_index.yaml
configs/runtime/: dev.yaml  gpu_smoke.yaml  v5_smoke.yaml
docs/: dataset_layout.md  paper_results.md  quickstart.md  reproducibility.md
docs/figures/: README.md
examples/: README.md  build_paper_report.sh  eval_posterior_full.sh  eval_single_view_render.sh  eval_single_view_state.sh  export_paper_examples.sh  export_single_view_repr.sh  smoke_selector.sh  train_generator_full.sh  train_selector_full.sh  train_single_view_main.sh
(+88 files in other folders)
